k8s/networkpolicy/90-istio/allow-istiod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istiod-ingress
  namespace: istio-system
spec:
  podSelector:
    matchLabels:
      app: istiod
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
    ports:
    - protocol: TCP
      port: 15010   # istiod grpc-xds
    - protocol: TCP
      port: 15012   # istiod https-dns
    - protocol: TCP
      port: 443     # istiod https-webhook
    - protocol: TCP
      port: 15014   # istiod http-monitoring
