k8s/networkpolicy/90-istio/allow-kiali-ui.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kiali-ui
  namespace: istio-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kiali
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - protocol: TCP
      port: 20001
    - protocol: TCP
      port: 9090
